--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Castle.Windsor" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
     <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="1.0.0-rc010004" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
