use DebugType embedded
see https://devblogs.microsoft.com/dotnet/producing-packages-with-source-link/

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -66,6 +66,7 @@ Upgrade dependencies
     <ContinuousIntegrationBuild>$(TeamCityBuild)</ContinuousIntegrationBuild>
     <!-- include the pdb in the nuget package -->
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <!-- include supporting files in NuGet package -->
