--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- target frameworks -->
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
 
     <!-- Root Namespace -->
     <RootNamespace>PPWCode.API.Core</RootNamespace>
@@ -20,5 +20,18 @@
     <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="1.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
+
+  <Choose>
+    <When Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+      <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[3.1.11, 5)" />
+      </ItemGroup>
+    </When>
+    <When Condition=" '$(TargetFramework)' == 'net5.0' ">
+      <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
+      </ItemGroup>
+    </When>
+  </Choose>
 
 </Project>
