--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- target frameworks -->
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
 
     <!-- Root Namespace -->
     <RootNamespace>PPWCode.API.Core</RootNamespace>
@@ -29,7 +29,7 @@
     </When>
     <When Condition=" '$(TargetFramework)' == 'net5.0' ">
       <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.12" />
       </ItemGroup>
     </When>
   </Choose>
