--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -15,21 +15,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="[1.1.0, 2)" />
+    <PackageReference Include="Castle.Core" Version="4.1.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="Castle.Windsor" Version="5.1.1" />
-    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="1.0.0" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
   <Choose>
-    <When Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+    <When Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
       <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[3.1.11, 5)" />
+        <PackageReference Include="Newtonsoft.Json" Version="[12.0.3, 13)" />
       </ItemGroup>
     </When>
-    <When Condition=" '$(TargetFramework)' == 'net5.0' ">
+    <When Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
       <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[3.1.21, 4)" />
+        <PackageReference Include="Newtonsoft.Json" Version="[12.0.3, 13)" />
+      </ItemGroup>
+    </When>
+    <When Condition=" '$(TargetFramework)' == 'net6.0' ">
+      <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[6.0.0, 7)" />
+        <PackageReference Include="Newtonsoft.Json" Version="[13.0.1, 14)" />
       </ItemGroup>
     </When>
   </Choose>
