--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- target frameworks -->
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
 
     <!-- Root Namespace -->
     <RootNamespace>PPWCode.API.Core</RootNamespace>
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="[1.1.0-rc010006, 2)" />
+    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="[1.1.0-rc010007, 2)" />
     <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
@@ -30,6 +30,12 @@
     <When Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
       <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[3.1.21, 4)" />
+        <PackageReference Include="Newtonsoft.Json" Version="[12.0.3, 13)" />
+      </ItemGroup>
+    </When>
+    <When Condition=" '$(TargetFramework)' == 'net5.0' ">
+      <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="[5.0.12, 6)" />
         <PackageReference Include="Newtonsoft.Json" Version="[12.0.3, 13)" />
       </ItemGroup>
     </When>
