--- a/src/PPWCode.API.Core/PPWCode.API.Core.csproj
+++ b/src/PPWCode.API.Core/PPWCode.API.Core.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="[1.1.0-rc010007, 2)" />
+    <PackageReference Include="PPWCode.Vernacular.Exceptions.IV" Version="[1.1.0, 2)" />
     <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
