--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -83,6 +83,7 @@
       <![CDATA[
 1.0.0 Initial release
 1.1.0 Upgrade dependencies, Target .net core 3.1, .net 5.0, .net 6.0
+1.2.0 Upgrade dependencies
       ]]>
     </PackageReleaseNotes>
 
